Fix tests to check for hostname in subject alts rather than cn